--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -19,13 +19,47 @@
       </div>
       <div id="unity-warning"> </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth-compat.js"></script>
+    <script src="./config.js"></script>
     <script>
+      let unity = null
+      const googleProvider = new firebase.auth.GoogleAuthProvider();
+
+      function GoogleAuth(){
+        firebase.auth().signInWithRedirect(googleProvider);
+      }
+      firebase.auth()
+      .getRedirectResult()
+      .then((result) => {
+        if (result.credential) {
+          var credential = result.credential;
+          
+          // This gives you a Google Access Token. You can use it to access the Google API.
+          var token = credential.accessToken;
+          unity.SendMessage('JavaScriptManager', 'AuthWithGoogle', JSON.stringify({token}) );
+      }
+      // The signed-in user info.
+      var user = result.user;
+      // IdP data available in result.additionalUserInfo.profile.
+      // ...
+      }).catch((error) => {
+      // Handle Errors here.
+      var errorCode = error.code;
+      var errorMessage = error.message;
+      // The email of the user's account used.
+      var email = error.email;
+      // The firebase.auth.AuthCredential type that was used.
+      var credential = error.credential;
+      // ...
+      });
+
+      // -----------------separate old code
       window.addEventListener("load", function () {
         if ("serviceWorker" in navigator) {
           navigator.serviceWorker.register("ServiceWorker.js");
         }
       });
-
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
@@ -93,6 +127,7 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
+          unity = unityInstance;
         }).catch((message) => {
           alert(message);
         });
