--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -28,35 +28,47 @@
       const facebookProvider = new firebase.auth.FacebookAuthProvider();
 
       function GoogleAuth(){
-        firebase.auth().signInWithRedirect(googleProvider);
+        firebase.auth().signInWithPopup(googleProvider)
+          .then(result => {
+            unity.SendMessage('JavaScriptManager',result.credential.providerId === 'google.com' ? 'AuthWithGoogle' : 'AuthWithFacebook', JSON.stringify({id: result.user.uid}) );
+          })
+          .catch(err => {
+            console.log(err.code)
+          })
       }
       function FacebookAuth(){
-        firebase.auth().signInWithRedirect(facebookProvider);
+        firebase.auth().signInWithPopup(facebookProvider)
+          .then(result => {
+            unity.SendMessage('JavaScriptManager',result.credential.providerId === 'google.com' ? 'AuthWithGoogle' : 'AuthWithFacebook', JSON.stringify({id: result.user.uid}) );
+          })
+          .catch(err => {
+            console.log(err.code)
+          })
       }
-      firebase.auth()
-      .getRedirectResult()
-      .then((result) => {
-        if (result.credential) {
-          var credential = result.credential;
+      // firebase.auth()
+      // .getRedirectResult()
+      // .then((result) => {
+      //   if (result.credential) {
+      //     var credential = result.credential;
           
-          // This gives you a Google Access Token. You can use it to access the Google API.
-          var token = credential.accessToken;
-          unity.SendMessage('JavaScriptManager',result.credential.providerId === 'google.com' ? 'AuthWithGoogle' : 'AuthWithFacebook', JSON.stringify({id: result.user.uid}) );
-      }
-      // The signed-in user info.
-      var user = result.user;
-      // IdP data available in result.additionalUserInfo.profile.
-      // ...
-      }).catch((error) => {
-      // Handle Errors here.
-      var errorCode = error.code;
-      var errorMessage = error.message;
-      // The email of the user's account used.
-      var email = error.email;
-      // The firebase.auth.AuthCredential type that was used.
-      var credential = error.credential;
-      // ...
-      });
+      //     // This gives you a Google Access Token. You can use it to access the Google API.
+      //     var token = credential.accessToken;
+      //     unity.SendMessage('JavaScriptManager',result.credential.providerId === 'google.com' ? 'AuthWithGoogle' : 'AuthWithFacebook', JSON.stringify({id: result.user.uid}) );
+      // }
+      // // The signed-in user info.
+      // var user = result.user;
+      // // IdP data available in result.additionalUserInfo.profile.
+      // // ...
+      // }).catch((error) => {
+      // // Handle Errors here.
+      // var errorCode = error.code;
+      // var errorMessage = error.message;
+      // // The email of the user's account used.
+      // var email = error.email;
+      // // The firebase.auth.AuthCredential type that was used.
+      // var credential = error.credential;
+      // // ...
+      // });
 
       // -----------------separate old code
       window.addEventListener("load", function () {
