--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -136,6 +136,7 @@
       }
       inputEl.addEventListener('change', (e) => {
         unity.SendMessage('JavaScriptManager', 'SetInput', e.target.value)
+        console.log(e.target.value)
       })
       
     </script>
