--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -22,7 +22,7 @@
       </div>
       <div id="unity-warning"> </div>
     </div>
-    <input id="input" type="text" >
+    <input id="input" type="text">
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth-compat.js"></script>
     <script src="./config.js"></script>
@@ -134,12 +134,10 @@
       function DisplayKeyboard(){
         inputEl.focus()
       }
-      function HideKeyboard()
-      {
+      function HideKeyboard(){
       }
-      inputEl.addEventListener('change', (e) => {
+      inputEl.addEventListener('input', (e) => {
         unity.SendMessage('JavaScriptManager', 'SetInput', e.target.value)
-        console.log(e.target.value)
       })
       
     </script>
