--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -44,14 +44,15 @@
       let unity = null
       const googleProvider = new firebase.auth.GoogleAuthProvider();
       const facebookProvider = new firebase.auth.FacebookAuthProvider();
+      const database = new firebase.database();
       const btnCancelPayment = document.querySelector('#btn-cancelPayment')
       const stripe = Stripe("pk_live_51O9azOCJmlrAlGBoAojhLshRHV3rr5qqUXrdG13NYxbpkfLU69WVgypk06ZiARta7y7LSA3wEhbJNf2K6CvWP5Wf00trRX4rYy")
 
       function SetUserId(id){
         userId = id
 
-        var ref = firebase.database().ref(`users/${userId}`);
-        firebase.database().ref().on('value', function(snapshot) {
+        var ref = database.ref(`users/${userId}`);
+        database.ref().on('value', function(snapshot) {
           if(snapshot.exists()){
             const user = snapshot.val()
             unity.SendMessage('JavaScriptManager', 'OnUpdatedDiamonds', user.Coins)
