--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -51,8 +51,8 @@
       function SetUserId(id){
         userId = id
 
-        var ref = firebase.database().ref(`users/${userId}`);
-        firebase.database().ref().on('value', function(snapshot) {
+        var ref = firebase.database.ref(`users/${userId}`);
+        firebase.database.ref().on('value', function(snapshot) {
           if(snapshot.exists()){
             const user = snapshot.val()
             unity.SendMessage('JavaScriptManager', 'OnUpdatedDiamonds', user.Coins)
